--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                      <div class="list"><span>work</span><span>:</span><span>QA-engineer</span></div>
                      <div class="list"><span>location</span><span>:</span><span>Moscow</span></div>
                      <div class="list"><span>hobbies</span><span>:</span><span>Chess</span></div>
-                     <div class="list"><span>level</span><span>:</span><span>10</span></div>
-                     <div class="list"><span>energy</span><span>:</span><span>100</span></div>
+                     <div class="list"><span>energy</span><span>:</span><span>100%</span></div>
 
                   </div>
                </div>
