--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
 
 <body>
    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();
-   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+   <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+         m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+         m[i].l = 1 * new Date();
+         for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+         k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+      })
+         (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-   ym(95837814, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/95837814" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+      ym(95837814, "init", {
+         clickmap: true,
+         trackLinks: true,
+         accurateTrackBounce: true
+      });
+   </script>
+   <noscript>
+      <div><img src="https://mc.yandex.ru/watch/95837814" style="position:absolute; left:-9999px;" alt="" /></div>
+   </noscript>
+   <!-- /Yandex.Metrika counter -->
    <div class="wrapper">
       <main class="main">
          <!-- Облако -->
@@ -71,16 +75,16 @@
                <div class="text">
                   <!-- Александр Коробков -->
                   <div class="name">
-                     <div>Alexandr</div>
-                     <div>KOROBKOV</div>
+                     <div>Александр</div>
+                     <div>Коробков</div>
                   </div>
                   <div>
-                     <div class="list"><span>age</span><span>:</span><span>43</span></div>
-                     <div class="list"><span>work</span><span>:</span><span>QA-engineer</span></div>
-                     <div class="list"><span>location</span><span>:</span><span>Moscow</span></div>
-                     <div class="list"><span>hobbies</span><span>:</span><span>Alpinism,Chess</span></div>
-                     <div class="list"><span>level</span><span>:</span><span>10</span></div>
-                     <div class="list"><span>energy</span><span>:</span><span>100%</span></div>
+                     <div class="list"><span>возраст</span><span>:</span><span>44</span></div>
+                     <div class="list"><span>работа</span><span>:</span><span>QA-engineer</span></div>
+                     <div class="list"><span>локация</span><span>:</span><span>Moscow</span></div>
+                     <div class="list"><span>хобби</span><span>:</span><span>Alpinism,Chess</span></div>
+                     <div class="list"><span>уровень</span><span>:</span><span>10</span></div>
+                     <div class="list"><span>энергия</span><span>:</span><span>100%</span></div>
 
                   </div>
                </div>
